--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
+    "cypress":"cypress open",
     "start": "nodemon app.js"
   },
   "keywords": [],
