--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "cypress":"cypress open",
+    "cypress": "cypress open",
     "start": "nodemon app.js"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validations": "^2.2.3",
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
