--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.18.1",
     "express-validations": "^2.2.3",
     "moment": "^2.29.4",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "nodemailer": "^6.7.8",
+    "xid": "^0.0.2"
   },
   "devDependencies": {
     "cypress": "^10.6.0",
