--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cypress run",
     "cypress": "cypress open",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "ci:e2e":"start-server-and-test start http://localhost:9000 test"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "cypress": "^10.6.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "start-server-and-test": "^1.14.0"
   }
 }
