--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,5 +9,7 @@ services:
       context: .
       dockerfile: dockerfile.test
     command:  npm run ci:e2e
+    environment:
+      - MONGODB_URI = mongodb+srv://mybus:priuJr3FVQ96IcSB@cluster0.gn92lfx.mongodb.net/?retryWrites=true&w=majority
     ports:
       - 3000:3000
