added environment variable to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,5 +11,6 @@ services:
     command:  npm run ci:e2e
     environment:
       - MONGODB_URI=mongodb+srv://mybus:priuJr3FVQ96IcSB@cluster0.gn92lfx.mongodb.net/?retryWrites=true&w=majority
+      - PORT=9000
     ports:
       - 3000:3000
