--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "cypress run",
     "cypress": "cypress open",
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "ci:e2e":"start-server-and-test start http://localhost:9000 test"
   },
   "keywords": [],
