updated the docker-compose to use network

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - MONGODB_URI=mongodb+srv://mybus:priuJr3FVQ96IcSB@cluster0.gn92lfx.mongodb.net/?retryWrites=true&w=majority
       - PORT=9000
       - HOST=localhost
+    networks:
+      - api
   test:
     build:
       context: .
@@ -20,3 +22,7 @@ services:
       - MONGODB_URI=mongodb+srv://mybus:priuJr3FVQ96IcSB@cluster0.gn92lfx.mongodb.net/?retryWrites=true&w=majority
       - PORT=9000
       - HOST=localserver
+    networks:
+      - api
+networks:
+  api: {}
