--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   server:
+    container_name: localserver
     build: 
       dockerfile: dockerfile
       context: ./
