changed the image and decreased the commands of the test

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,9 +12,11 @@ services:
       - MONGODB_URI=mongodb+srv://mybus:priuJr3FVQ96IcSB@cluster0.gn92lfx.mongodb.net/?retryWrites=true&w=majority
       - PORT=9000
       - HOST=localhost
+    command: npm start
     networks:
       - api
   test:
+    container_name: server_test
     build:
       context: .
       dockerfile: dockerfile.local
@@ -28,4 +30,5 @@ services:
     networks:
       - api
 networks:
-  api: {}
+  api: 
+    driver: bridge
