--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validations": "^2.2.3",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.7.8",
     "xid": "^0.0.2"
   },
