--- a/dockerfile.production
+++ b/dockerfile.production
@@ -1,4 +1,4 @@
-FROM cypress/base:18.6.0
+FROM node:18-alpine3.15
 
 RUN mkdir server
 
@@ -15,5 +15,7 @@ COPY ./package.json yarn.lock ./
 RUN yarn
 
 COPY . .
+
+EXPOSE 9000
 
 CMD ["yarn","start"]
